frontend: handle missing leader card data

--- a/data/templates/past_event.html
+++ b/data/templates/past_event.html
@@ -1081,7 +1081,7 @@
 
 				nameCellDiv.setAttribute("class", "d-flex align-items-center gap-2 username-cell")
 
-				if(!document.getElementById("compactModeCb").checked) {
+				if(!document.getElementById("compactModeCb").checked && slot.card) {
 					nameCell.style.paddingTop = "5px"
 					nameCell.style.paddingBottom = "5px"
 
