frontend: clarify the info notice

--- a/data/templates/past_event.html
+++ b/data/templates/past_event.html
@@ -634,7 +634,7 @@
 						</div>
 						<p>Event Bonus: <span id="eventProfileBonusLb" class="fw-bold"></span></p>
 					</div>
-					<div class="alert alert-info text-center" role="alert">The data below reflects the point in time you're currently viewing!</div>
+					<div class="alert alert-info text-center" role="alert">All data below reflects the point in time you're currently viewing!</div>
 					<div>
 						<h4>Recent Games</h4>
 						<div style="height: 6rem; width: 100%;">
